:constructor: on HomePage                                                     finishing the footer and fix arrow and z-index  :bug: on the navbar

--- a/ElectroCode/Client/src/App.scss
+++ b/ElectroCode/Client/src/App.scss
@@ -2,6 +2,12 @@
 ::before,
 html {
   box-sizing: border-box;
+
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .app {
@@ -18,7 +24,7 @@ html {
     width: 100%;
     height: 100dvh;
     position: relative;
-    // border: 1px solid red;
+    border: 1px solid red;
 
     // -__Navbar___
     .navbar {
@@ -52,6 +58,7 @@ html {
           padding-left: 15px;
           list-style: none;
           position: absolute;
+          z-index: 5;
           background-color: $darkBlue;
           font-size: 1.5rem;
           line-height: 3rem;
@@ -73,6 +80,7 @@ html {
             left: 100px;
 
             content: url("./assets/uparrow.png");
+            
           }
 
           .downarrow::after {
@@ -98,9 +106,9 @@ html {
             padding: 30;
             text-align: left;
             line-height: 2rem;
+            z-index: 4;
             width: max-content;
             position: relative;
-            // background-color: $lightBlue;
             // burada transition add  open close arasinda
             @media #{$media-tablet} {
               position: absolute;
@@ -120,7 +128,7 @@ html {
           .close {
             display: none;
           }
-
+// adding the line above the links in the navbar
           .list--item {
             position: relative;
             a {
@@ -175,6 +183,136 @@ html {
           transition-timing-function: ease-in-out;
         }
       }
+      // - NavBar finished
     }
+
+
+    // -__Footer__
+
+   footer {
+    width: 100%;
+    padding: 10px 0;
+    // border: 1px solid red;
+    background-color: $darkBlue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    .footer--logo {
+      width: 160px;
+      height: 100px;
+      // transform: translateX(-20%);
+      img{
+        width: 100%;
+        height: 100%;
+        // border: 1px solid yellow;
+      }
+    }
+
+    .footer--phone {
+      // border: 1px solid green;
+      text-align: center;
+      p,b{
+        color: $silver;
+        letter-spacing: 1px;
+        
+        margin: 5px;
+      }
+    }
+
+
+    .footer--icon {
+      color: $silver;
+      font-size: 24px;
+      margin-bottom: 4px;
+    }
+    .footer--socialMedia{
+      text-align: center;
+      // border: 1px solid yellow;
+
+      b{
+        color: $silver;
+        
+      }
+
+      .footer--icons {
+        margin-top: 4px;
+        display: flex;
+        justify-content: space-evenly;
+      }
+      .footer--icon__social {
+        color: $silver;
+        transform:scale(1);
+        transition-property: color,transform;
+        transition-duration: 2s;
+        transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+        &:nth-child(1):hover{
+          transform: scale(1.5);
+          color: blue;
+          
+        }
+        &:nth-child(2):hover{
+          color:red;
+          transform: scale(1.5);
+        }
+        &:nth-child(3):hover{
+          color: #3390EC;
+          transform: scale(1.5);
+        }
+      }
+
+
+    }
+
+    .footer--copyRights{
+      color: $silver;
+      font-size: 13px;
+      .footer--icon {
+        font-size: 10px;
+        vertical-align: bottom;
+      }
+    }
+
+
+    @media #{$media-tablet} {
+      
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    // -Footer Finished
+   }
+
+  //  -__Card__
+
+
+
+  // -__homePage__
+   .home--hero{
+   position: relative;
+    width: 100%;
+    height: 90dvh;
+    border: 1px solid blue;
+    background: url("./assets/backGround.webp"),linear-gradient(290deg, rgba(218,112,44,0.5) 25%, rgba(9,13,56,0.5) 66%); 
+    background-blend-mode:darken;
+    background-size: 100% 80%;
+    background-repeat: no-repeat;
+    // position: absolute;
+    display: flex;
+    
+
+    .hero--text {
+      
+      position: absolute;
+      width: 200px;
+      padding: 10px;
+      border: 1px solid red;
+      text-wrap: wrap;
+
+    }
+  
+   }
+   
+
+
   }
 }
